--- a/makeup.css
+++ b/makeup.css
@@ -1,4 +1,4 @@
-.heading{
+/*.heading{
     font-size: 1.5rem;
     font-weight: 550;
     text-align: center;
@@ -6,9 +6,9 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     font-family: 'Quicksand', sans-serif;
-}
+}*/
 
-h2{
+h2 {
     font-size: 1.3rem;
     font-weight: 550;
     text-align: left;
@@ -16,6 +16,10 @@ h2{
     letter-spacing: 1px;
     margin-bottom: 1.3rex;
     font-family: 'Quicksand', sans-serif;
+}
+
+.logo {
+    padding-bottom: 20px;
 }
 
 p {
@@ -27,49 +31,46 @@ p {
     font-family: 'Quicksand', sans-serif;
 }
 
-.sideheading{
+.sideheading {
     font-size: .9rem;
     font-weight: 550;
     text-align: center;
     color: #2a79e0;
     letter-spacing: 1px;
-    font-family: 'Quicksand', sans-serif; 
+    font-family: 'Quicksand', sans-serif;
 }
 
-.contact{
+.contact {
     font-size: 0.8rem;
-    font-weight: 450; 
+    font-weight: 450;
     text-align: left;
     margin-bottom: 2rex;
     color: #912828;
     letter-spacing: 1px;
     font-family: 'Quicksand', sans-serif;
 }
-#coverphoto{
-    width: 100%;
-    height: 100%;
+
+#coverphoto {
+    width: 97vw;
+    height: 30vh;
     margin: auto;
     display: block;
-    border:1px solid #2a79e0;
 }
-.scover{
-    width: 75%;
-    height: 75%;
-    border:1px solid #2a79e0;
-    border-radius: 40%;
+
+.scover {
+    width: 40vw;
+    height: 40vh;
+    border-radius: 10%;
 }
-td,th{
-    padding: 5px;
-    text-align: center;
-    font-family: 'Quicksand', sans-serif;
-}
-table{
-    width: 100%;
-    height: 100%;
+
+table {
+    width: 80vw;
+    height: 80vh;
     margin: auto;
     display: block;
     border-collapse: collapse;
- }
- *{
-    background-color: #cbe7cd;
- }
+}
+
+* {
+    background-color: lightgrey;
+}
